--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>My first three.js app</title>
-    <style>
-      body { margin: 0; }
-    </style>
-  </head>
-  <body>
-    <script type="module" src="/main.js"></script>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <title>My first three.js app</title>
+  <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+    }
+
+    #c {
+      width: 100%;
+      height: 100%;
+      display: block;
+
+      background: url(resources/images/CIMG0063.JPG) no-repeat center center;
+      background-size: cover;
+    }
+  </style>
+</head>
+<body>
+  <canvas id="c"></canvas>
+  <script type="module" src="/main.js"></script>
+</body>
 </html>
-    
